meilleure gestion des duplicata + suppression des setters "unsafe"